--- a/executive/addDepartment.html
+++ b/executive/addDepartment.html
@@ -19,7 +19,7 @@
                 <p>D.A.M.S</p>
                 <hr>
                 <div class="row-sidebar">
-                 <a href="./index.html">   <i class="far fa-user-circle icon-sidebar"></i>
+                 <a href="./index.php">   <i class="far fa-user-circle icon-sidebar"></i>
                     <div class="row-sidebar-text name-bar ">
                         Admin
                     </div>
